--- a/subprojects/docs/src/samples/build-organization/compositeBuilds/declared-substitution/README.adoc
+++ b/subprojects/docs/src/samples/build-organization/compositeBuilds/declared-substitution/README.adoc
@@ -28,8 +28,8 @@ When this build is included in a composite, it will attempt to substitute for th
 In order to use the `unpublished` library as-is in a composite build, the composing build can explicitly declare the substitutions that it provides.
 
 ====
-include::sample[dir="groovy/my-app",files="settings.gradle[tags=composite_substitution]"]
-include::sample[dir="kotlin/my-app",files="settings.gradle.kts[tags=composite_substitution]"]
+include::sample[dir="groovy",files="settings.gradle[tags=composite_substitution]"]
+include::sample[dir="kotlin",files="settings.gradle.kts[tags=composite_substitution]"]
 ====
 
-With this configuration, the `my-app` composite build will substitute any dependency on `org.sample:number-utils` with a dependency on the root project of `anonymous-library`.
+With this configuration, the composite build will substitute any dependency on `org.sample:number-utils` with a dependency on the root project of `anonymous-library`.
